Welcome to the Kaguya ChangeLog.


Changelog:

Version 1.21.3

- 

Version 1.21.2

- $n bomb command limited to five uses per hour (was ten).
    - This is to prevent gateway deadlocking (where the bot crashes basically).
    - (If someone wants to spam this five times in succession, nothing will happen anymore. Ten would deadlock the bot.)
- $stats command finalized
- Administrators now automatically override any channel whitelists/blacklists.

Version 1.21.1

- $m join command removed from command list.
- $stats command created (needs to be worked on)

Version 1.21

- Fixed a bug where songs queued in the music player would not skip to the next song when finished.
- All NSFW images are now guaranteed to be compliant with Discord's Terms of Service.
- All NSFW tags have been temporarily disabled as a result, except for ($n, $n bomb, and $n gif).
- NSFW collection significantly improved. Higher quality images, and only the best of the best stuff.
- NSFW images no longer come with an embedded message, they are sent as individual files.

Version 1.20

- Fixed a typo in the help command of $cwl
- Fixed an issue where some commands were being logged twice in the console.
- Removed a few unused user account variables
- Removed the "VerifyUsers" timer.
- Removed a few other poor/unused timers.
- IsBlacklisted is now a boolean, not an integer.
- KaguyaDiamonds has been renamed to Diamonds in UserAccount.cs (Line 12)
- When kicking a user (without a reason), the kicker's username will now properly be displayed.
- Command execution time should be at least slightly improved.
- ConsoleCommandLog.CreateCommandResponse no longer logs to the console, resulting in no more duplicate command logs.
- The "servicing x guilds" count is now separated with a comma if over 1,000 guilds.
- Resources folder is now backed up every 5 minutes (was 15). Logs are now backed up as well.
- $voteclaim should now be able to more accurately detect whether you have voted or not.