@@ -72,11 +72,23 @@ namespace Kaguya.Core.CommandHandler
 
             Console.ForegroundColor = ConsoleColor.White;
             Console.WriteLine("\nKaguya Music Service Started.");
+
+            
+
             Console.WriteLine("\nBegin Logging.\n");
             Console.WriteLine("--------------------------------------------");
         }
 
         #pragma warning disable IDE1006 //Disable warnings for naming styles
+
+        public static void LoadKaguyaData()
+        {
+            if (Global.ShardsLoggedIn == Global.ShardsToLogIn) //Loads data files.
+            {
+                Global.UserAccounts = DataStorage2.LoadUserAccounts("Resources/accounts.json").ToList();
+                Global.Servers = DataStorage2.LoadServers("Resources/servers.json").ToList();
+            }
+        }
 
         public async Task osuLinkParser(SocketMessage s)
         {
